--- a/angular-demo-1/src/app/header/header.component.scss
+++ b/angular-demo-1/src/app/header/header.component.scss
@@ -1,17 +1,34 @@
+$font-family:Tahoma, sans-serif;
+$primary-color:#213555;
+$secondary-color:#4F709C;
+$styling-color:#D8C4B6;
+$highlighting-color:#F5EFE7;
+
+body {
+    font-family: $font-family;
+  }
 nav{
     display: flex;
     justify-content: space-between;
     margin: 2% 3%;
     padding: 1% 2%;  
 
-    border-bottom: 2px solid #D8C4B6;
+    border-bottom: 2px solid $styling-color;
     
     
 }
 nav a{
     text-decoration: none;
     font-size: 24px;
-    color: #213555;
+    color: $secondary-color;
+    letter-spacing: 0px;
+    font-weight: 500;
+    &:hover{
+    color: $primary-color;
+    letter-spacing: 0.3px;
+
+
+    }
 }
 .nav-link-container{
     display: flex;
