--- a/angular-demo-1/src/app/home/home.component.html
+++ b/angular-demo-1/src/app/home/home.component.html
@@ -1,2 +1,11 @@
-<app-header></app-header>
-<p>home works!</p>
+<div class="container">
+
+<div class="body-container">
+
+    <app-header></app-header>
+    <p>home works!</p>
+</div>
+<div class="footer-container">
+    <app-footer></app-footer>
+</div>
+</div>
